--- a/tribute.html
+++ b/tribute.html
@@ -6,21 +6,104 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+ 
+        /* Styling the body element
+        like body color and margin */
+         
+        body {
+            background-color: #00F33;
+            margin: 20%;
+        }
+ 
+        /* Styling the Title and giving
+        shadow to the title */
+        #title {
+            text-align: center;
+            text-shadow: 5px 5px 10px blue;
+            font-size: 7vh;
+        }
+ 
+        /* Setting width and display
+        type of image */
+        img {
+            display: inline-block;
+            width: 100%;
+        }
+ 
+        /* Setting font color and font
+        size of the image-caption */
+        #caption {
+            font-size: 17px;
+            font-family: Gill Sans;
+            color: black;
+        }
+ 
+        /* Styling the content of the page like-
+        padding, font-size, font color etc.*/
+        div#tribute-data {
+            background-color: rgb(46, 139, 87, 0.25);
+            box-shadow: 20px 20px 20px #555555;
+            font-family: Georgia;
+            padding: 25px 25px;
+            margin: 11px;
+            margin-top: 50px;
+        }
+ 
+        /* Styling the title of the content */
+        h1.title-Lata {
+            font-size: 35px;
+            color: white;
+            text-align: center;
+            text-shadow: 5px 5px 10px black;
+        }
+ 
+        /* Styling the link provided at the end */
+        #tribute-link {
+            text-decoration: blue;
+            color: black;
+        }
+    </style>
 </head>
 
 <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     
     <div id="main">
-        <header id="header"></header>
-        <div id="title">
-            Lata Mangeskar
+        <!-- Title of the page -->
+        <h1 id="title">
+            Lata Mangeskar 
+        </h1>
         </div>
         <div id="img-div">
             <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/Lata_Mangeshkar_-_still_29065_crop.jpg/220px-Lata_Mangeshkar_-_still_29065_crop.jpg"
-                alt="">
+                alt="Error Loading Image ">
+                <small id="caption">
+                    Greatest Indian Female Vocalist 
+                </small>
         </div>
-    </div>
+        <div id="tribute-data">
+ 
+            <!--Achievements and other
+                details of the person-->
+            <h1 class="title-LATA">
+                About the Legend
+            </h1>
+
+   <p>             Lata Mangeshkar was born on 28 September 1929 in a Maharashtrian Brahmin family the eldest daughter of Deenanath Mangeshkar, a Marathi and his wife Shudhamati in Indore.Lata Mangeshkar belonged to a family of performers. Her father ran a theatre company, and Lata grew up with a love of music. The aim of the sisters (Lata and Asha Bhosle) when they took up singing was to carry forward their father’s legacy. In an old interview with Stardust, she recalled the immediate reason for her vocation. She said, “It so happened that once my father asked his shagird (disciple) to practice a raag while he finished some work. I was playing nearby and suddenly a note of the raag that shagird was rendering, jarred. And the next minute, I was correcting him. When my father returned, he discovered a shagird in his own daughter.”<br><br>
+                   Lata recorded the first song of her career “Naachu Yaa Gade, Khelu Saari Mani Haus Bhaari” in 1942 for a Marathi movie called Kiti Hasaal. But unfortunately, the song was removed from the film’s final cut.Her first Hindi song was "Mata Ek Sapoot Ki Duniya Badal De Tu" for the Marathi film Gajaabhaau (1943).<br><br>
+                   The 1974 edition of The Guinness Book of Records had listed Lata Mangeshkar as the most recorded artist. But the claim was contested by Mohammed Rafi. The book continued to list Lata’s name but also mentioned Rafi’s claim. The entry was removed in 1991 until 2011, in which Guinness put Lata’s sister as the most recorded artist. Currently, Pulapaka Susheela holds the honour.<br><br>
+                   Lata had a brief tenure as an MP (Member of Parliament) from 1999 to 2005. She had been nominated to the Rajya Sabha (Upper House) in 1999. She described her tenure as an unhappy one and claimed she was reluctant to be inducted.<br><br>
+                   Lata was not just an Indian singing legend. The lovers of her melodious voice could be found all over the world. She holds the honour of being the first-ever Indian to perform in the prestigious Royal Albert Hall, London. The government of France conferred her with the Officer of the Legion of Honour in 2007, which is the country’s highest civilian award.<br><br>
+   </p>  
+
+
+</div>
+<br>
+            For more information,
+        check out
+        <a id="tribute-link" href="https://en.wikipedia.org/wiki/Lata_Mangeshkar">
+            <b>Lata Mangeshkar</b> on Wikipedia. 
 </body>
 
 </html>
